--- a/repo/pom.xml
+++ b/repo/pom.xml
@@ -46,6 +46,24 @@
             <version>${project.version}</version>
             <type>amp</type>
         </dependency>
+        <dependency>
+            <groupId>com.metaversant</groupId>
+            <artifactId>share-site-creators-repo</artifactId>
+            <version>0.0.6</version>
+            <type>amp</type>
+        </dependency>
+        <dependency>
+            <groupId>com.metaversant</groupId>
+            <artifactId>share-site-space-templates-repo</artifactId>
+            <version>1.1.2</version>
+            <type>amp</type>
+        </dependency>
+        <dependency>
+            <groupId>de.fmaul</groupId>
+            <artifactId>javascript-console-repo</artifactId>
+            <type>amp</type>
+            <version>0.7-SNAPSHOT</version>
+        </dependency>
         <!-- Uncomment if you are using SPP (SharePoint Protocol Support) for Online Edit etc -->
         <!--
         <dependency>
@@ -92,6 +110,21 @@
                         <overlay>
                             <groupId>${project.groupId}</groupId>
                             <artifactId>conexiam-core-repo-amp</artifactId>
+                            <type>amp</type>
+                        </overlay>
+                        <overlay>
+                            <groupId>com.metaversant</groupId>
+                            <artifactId>share-site-creators-repo</artifactId>
+                            <type>amp</type>
+                        </overlay>
+                        <overlay>
+                            <groupId>com.metaversant</groupId>
+                            <artifactId>share-site-space-templates-repo</artifactId>
+                            <type>amp</type>
+                        </overlay>
+                        <overlay>
+                            <groupId>de.fmaul</groupId>
+                            <artifactId>javascript-console-repo</artifactId>
                             <type>amp</type>
                         </overlay>
                         <!-- Uncomment if you are using SPP -->
