Add the ACL Templates Common project as a dependency. Implement Authority Template Resolvers for client group, project group, and engagement lead. Define ACL Templates for joint-team-collaborators, joint-team-consumers, and client consumers. Add an aspect to the core content model called cxm:aclTemplatable, which can be used to store the default and active ACL Template for a node. Right now this is used so that when a Paid Engagement site is created, the permissions can be set on its document library folders.

--- a/conexiam-core-repo-amp/pom.xml
+++ b/conexiam-core-repo-amp/pom.xml
@@ -24,6 +24,12 @@
             <groupId>${alfresco.groupId}</groupId>
             <artifactId>alfresco-repository</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.conexiam</groupId>
+            <artifactId>acl-templates-common</artifactId>
+            <version>1.0.0</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- Uncomment if you are using RM (Records Management) module, brings in RM related classes -->
         <!--
