--- a/conexiam-core-share-amp/src/main/amp/config/alfresco/web-extension/messages/conexiam-share.properties
+++ b/conexiam-core-share-amp/src/main/amp/config/alfresco/web-extension/messages/conexiam-share.properties
@@ -8,3 +8,8 @@ prop.cxm_retentionEndDate=Retention End Date
 assoc.cxm_projectGroup=Project Group
 assoc.cxm_clientGroup=Client Group
 assoc.cxm_engagementLead=Engagement Lead
+
+#cxm:aclTemplatable
+aspect.cxm_aclTemplatable=Conexiam ACL Templatable
+prop.cxm_defaultAclTemplate=Default ACL Template
+prop.cxm_aclTemplate=ACL Template
