--- a/conexiam-core-repo-amp/pom.xml
+++ b/conexiam-core-repo-amp/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.conexiam</groupId>
         <artifactId>conexiam-core</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
 
     <properties>
@@ -41,6 +41,22 @@
         </dependency>
         -->
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/AclTemplateTest.java</exclude>
+                        <exclude>**/AuthorityResolverTest.java</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <profiles>
 
