--- a/solr-config/pom.xml
+++ b/solr-config/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>com.conexiam</groupId>
         <artifactId>conexiam-core</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
 
     <!-- Build Solr Configuration only when we run an embedded Tomcat (i.e. profile run is enabled).
